Rename allocators