@@ -26,6 +26,7 @@
 package jdk.incubator.foreign;
 
 import jdk.internal.foreign.ArenaAllocator;
+import jdk.internal.foreign.ResourceScopeImpl;
 import jdk.internal.foreign.Utils;
 
 import java.lang.invoke.VarHandle;
@@ -36,29 +37,23 @@ import java.util.Objects;
 import java.util.function.Function;
 
 /**
- * This interface models a memory allocator. This interface defines several default methods
+ * This interface models a memory allocator. Clients implementing this interface
+ * must implement the {@link #allocate(long, long)} method. This interface defines several default methods
  * which can be useful to create segments from several kinds of Java values such as primitives and arrays.
  * This interface can be seen as a thin wrapper around the basic capabilities for creating native segments
- * (e.g. {@link MemorySegment#allocateNative(long, long, ResourceScope)}). An allocator is always associated
- * with a {@link #scope() scope}. All memory segments obtained from a given allocator must be associated with
- * the allocator's scope.
+ * (e.g. {@link MemorySegment#allocateNative(long, long, ResourceScope)}); since {@link SegmentAllocator} is a <em>functional interface</em>,
+ * clients can easily obtain a native allocator by using either a lambda expression or a method reference.
  * <p>
- * This interface also defines factories for commonly used allocators; for instance {@link #arenaUnbounded(ResourceScope)}
- * and {@link #arenaBounded(long, ResourceScope)} are arena-style native allocators. Finally {@link #prefixAllocator(MemorySegment)}
- * returns an allocator which wraps a segment (either on-heap or off-heap) and recycles its content upon each new allocation request.
+ * This interface also defines factories for commonly used allocators; for instance {@link #newNativeArena(ResourceScope)}
+ * creates an arena-style native allocator, while {@link #prefixAllocator(MemorySegment)} creates an allocator
+ * which wraps a segment (either on-heap or off-heap) and recycles its content upon each new allocation request.
  */
+@FunctionalInterface
 public interface SegmentAllocator {
 
     /**
-     * Obtains the allocator scope. All segments obtained from this allocator should be associated with the scope returned
-     * from this method.
-     * @return the allocator scope.
-     */
-    ResourceScope scope();
-
-    /**
      * Converts a Java string into a UTF-8 encoded, null-terminated C string,
-     * storing the result into a memory segment, associated with this allocator {@link #scope() scope}.
+     * storing the result into a memory segment.
      * <p>
      * This method always replaces malformed-input and unmappable-character
      * sequences with this charset's default replacement byte array.  The
@@ -74,8 +69,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given byte value.
+     * Allocate a memory segment with given layout and initialize it with given byte value.
      * @implSpec the default implementation for this method calls {@code this.allocate(layout)}.
      * @param layout the layout of the block of memory to be allocated.
      * @param value the value to be set on the newly allocated memory block.
@@ -90,8 +84,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given char value.
+     * Allocate a memory segment with given layout and initialize it with given char value.
      * @implSpec the default implementation for this method calls {@code this.allocate(layout)}.
      * @param layout the layout of the block of memory to be allocated.
      * @param value the value to be set on the newly allocated memory block.
@@ -106,8 +99,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given short value.
+     * Allocate a memory segment with given layout and initialize it with given short value.
      * @implSpec the default implementation for this method calls {@code this.allocate(layout)}.
      * @param layout the layout of the block of memory to be allocated.
      * @param value the value to be set on the newly allocated memory block.
@@ -122,8 +114,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given int value.
+     * Allocate a memory segment with given layout and initialize it with given int value.
      * @implSpec the default implementation for this method calls {@code this.allocate(layout)}.
      * @param layout the layout of the block of memory to be allocated.
      * @param value the value to be set on the newly allocated memory block.
@@ -138,8 +129,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given float value.
+     * Allocate a memory segment with given layout and initialize it with given float value.
      * @implSpec the default implementation for this method calls {@code this.allocate(layout)}.
      * @param layout the layout of the block of memory to be allocated.
      * @param value the value to be set on the newly allocated memory block.
@@ -154,8 +144,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given long value.
+     * Allocate a memory segment with given layout and initialize it with given long value.
      * @implSpec the default implementation for this method calls {@code this.allocate(layout)}.
      * @param layout the layout of the block of memory to be allocated.
      * @param value the value to be set on the newly allocated memory block.
@@ -170,8 +159,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given double value.
+     * Allocate a memory segment with given layout and initialize it with given double value.
      * @implSpec the default implementation for this method calls {@code this.allocate(layout)}.
      * @param layout the layout of the block of memory to be allocated.
      * @param value the value to be set on the newly allocated memory block.
@@ -186,8 +174,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given address value
+     * Allocate a memory segment with given layout and initialize it with given address value
      * (expressed as an {@link Addressable} instance).
      * The address value might be narrowed according to the platform address size (see {@link ValueLayout#ADDRESS}).
      * @implSpec the default implementation for this method calls {@code this.allocate(layout)}.
@@ -204,8 +191,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given byte array.
+     * Allocate a memory segment with given layout and initialize it with given byte array.
      * @implSpec the default implementation for this method calls {@code this.allocateArray(layout, array.length)}.
      * @param elementLayout the element layout of the array to be allocated.
      * @param array the array to be copied on the newly allocated memory block.
@@ -216,8 +202,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given short array.
+     * Allocate a memory segment with given layout and initialize it with given short array.
      * @implSpec the default implementation for this method calls {@code this.allocateArray(layout, array.length)}.
      * @param elementLayout the element layout of the array to be allocated.
      * @param array the array to be copied on the newly allocated memory block.
@@ -228,8 +213,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given char array.
+     * Allocate a memory segment with given layout and initialize it with given char array.
      * @implSpec the default implementation for this method calls {@code this.allocateArray(layout, array.length)}.
      * @param elementLayout the element layout of the array to be allocated.
      * @param array the array to be copied on the newly allocated memory block.
@@ -240,8 +224,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given int array.
+     * Allocate a memory segment with given layout and initialize it with given int array.
      * @implSpec the default implementation for this method calls {@code this.allocateArray(layout, array.length)}.
      * @param elementLayout the element layout of the array to be allocated.
      * @param array the array to be copied on the newly allocated memory block.
@@ -252,8 +235,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given float array.
+     * Allocate a memory segment with given layout and initialize it with given float array.
      * @implSpec the default implementation for this method calls {@code this.allocateArray(layout, array.length)}.
      * @param elementLayout the element layout of the array to be allocated.
      * @param array the array to be copied on the newly allocated memory block.
@@ -264,8 +246,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given long array.
+     * Allocate a memory segment with given layout and initialize it with given long array.
      * @implSpec the default implementation for this method calls {@code this.allocateArray(layout, array.length)}.
      * @param elementLayout the element layout of the array to be allocated.
      * @param array the array to be copied on the newly allocated memory block.
@@ -276,8 +257,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope},
-     * with given layout and initialize it with given double array.
+     * Allocate a memory segment with given layout and initialize it with given double array.
      * @implSpec the default implementation for this method calls {@code this.allocateArray(layout, array.length)}.
      * @param elementLayout the element layout of the array to be allocated.
      * @param array the array to be copied on the newly allocated memory block.
@@ -299,7 +279,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope}, with given layout.
+     * Allocate a memory segment with given layout.
      * @implSpec the default implementation for this method calls {@code this.allocate(layout.byteSize(), layout.byteAlignment())}.
      * @param layout the layout of the block of memory to be allocated.
      * @return a segment for the newly allocated memory block.
@@ -310,7 +290,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope}, with given element layout and size.
+     * Allocate a memory segment with given element layout and size.
      * @implSpec the default implementation for this method calls {@code this.allocate(MemoryLayout.sequenceLayout(count, elementLayout))}.
      * @param elementLayout the array element layout.
      * @param count the array element count.
@@ -322,7 +302,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope}, with given size
+     * Allocate a memory segment with given size
      * and default alignment constraints (1-byte aligned).
      * @implSpec the default implementation for this method calls {@code this.allocate(bytesSize, 1)}.
      * @param bytesSize the size (in bytes) of the block of memory to be allocated.
@@ -333,8 +313,7 @@ public interface SegmentAllocator {
     }
 
     /**
-     * Allocate a memory segment, associated with this allocator {@link #scope() scope}, with given size and
-     * alignment constraints.
+     * Allocate a memory segment with given size and alignment constraints.
      * @param bytesSize the size (in bytes) of the block of memory to be allocated.
      * @param bytesAlignment the alignment (in bytes) of the block of memory to be allocated.
      * @return a segment for the newly allocated memory block.
@@ -342,74 +321,41 @@ public interface SegmentAllocator {
     MemorySegment allocate(long bytesSize, long bytesAlignment);
 
     /**
-     * Returns a native arena-based allocator, associated with the provided scope,
-     * which {@linkplain MemorySegment#allocateNative(long, ResourceScope) allocates}
-     * a single memory segment, of given size, and then responds to allocation request by returning different slices of that same segment
-     * (until no further allocation is possible).
-     * This can be useful when clients want to perform multiple allocation requests while avoiding the cost associated
-     * with allocating a new off-heap memory region upon each allocation request.
-     * <p>
-     * An allocator associated with a <em>shared</em> resource scope is thread-safe and allocation requests may be
-     * performed concurrently; conversely, if the arena allocator is associated with a <em>confined</em> resource scope,
-     * allocation requests can only occur from the thread owning the allocator's resource scope.
-     * <p>
-     * The returned allocator might throw an {@link OutOfMemoryError} if an incoming allocation request exceeds
-     * the allocator capacity.
-     *
-     * @param size the size (in bytes) of the allocation arena.
-     * @param scope the scope associated with the segments returned by the arena-based allocator.
-     * @return a new bounded arena-based allocator
-     * @throws IllegalArgumentException if {@code size <= 0}.
-     * @throws IllegalStateException if {@code scope} has been already closed, or if access occurs from a thread other
-     * than the thread owning {@code scope}.
-     */
-    static SegmentAllocator arenaBounded(long size, ResourceScope scope) {
-        Objects.requireNonNull(scope);
-        return scope.ownerThread() == null ?
-                new ArenaAllocator.BoundedSharedArenaAllocator(scope, size) :
-                new ArenaAllocator.BoundedArenaAllocator(scope, size);
-    }
-
-    /**
-     * Returns a native unbounded arena-based allocator, associated with the provided scope, with predefined block size.
-     * <p>
-     * The returned allocator {@linkplain MemorySegment#allocateNative(long, ResourceScope) allocates} a memory segment
-     * {@code S} of a certain (fixed) block size and then responds to allocation requests in one of the following ways:
-     * <ul>
-     *     <li>if the size of the allocation requests is smaller than the size of {@code S}, and {@code S} has a <em>free</em>
-     *     slice {@code S'} which fits that allocation request, return that {@code S'}.
-     *     <li>if the size of the allocation requests is smaller than the size of {@code S}, and {@code S} has no <em>free</em>
-     *     slices which fits that allocation request, allocate a new segment {@code S'}, which has same size as {@code S}
-     *     and set {@code S = S'}; the allocator then tries to respond to the same allocation request again.
-     *     <li>if the size of the allocation requests is bigger than the size of {@code S}, allocate a new segment {@code S'},
-     *     which has a sufficient size to satisfy the allocation request, and return {@code S'}.
-     * </ul>
-     * <p>
-     * The block size of the returned arena-based allocator is unspecified, can be platform-dependent, and should generally
-     * not be relied upon. Clients can {@linkplain #arenaUnbounded(long, ResourceScope) obtain} an unbounded arena-based allocator
-     * with specific block size, if they so wish.
-     * <p>
-     * This segment allocator can be useful when clients want to perform multiple allocation requests while avoiding the
-     * cost associated with allocating a new off-heap memory region upon each allocation request.
-     * <p>
-     * An allocator associated with a <em>shared</em> resource scope is thread-safe and allocation requests may be
-     * performed concurrently; conversely, if the arena allocator is associated with a <em>confined</em> resource scope,
-     * allocation requests can only occur from the thread owning the allocator's resource scope.
-     * <p>
-     * The returned allocator might throw an {@link OutOfMemoryError} if an incoming allocation request exceeds
-     * the system capacity.
+     * Returns a native unbounded arena-based allocator, with predefined block size and maximum arena size,
+     * associated with the provided scope. Equivalent to the following code:
+     * <blockquote><pre>{@code
+    SegmentAllocator.newNativeArena(Long.MAX_VALUE, predefinedBlockSize, scope);
+     * }</pre></blockquote>
      *
      * @param scope the scope associated with the segments returned by the arena-based allocator.
      * @return a new unbounded arena-based allocator
      * @throws IllegalStateException if {@code scope} has been already closed, or if access occurs from a thread other
      * than the thread owning {@code scope}.
      */
-    static SegmentAllocator arenaUnbounded(ResourceScope scope) {
-        return arenaUnbounded(ArenaAllocator.DEFAULT_BLOCK_SIZE, scope);
+    static SegmentAllocator newNativeArena(ResourceScope scope) {
+        return newNativeArena(Long.MAX_VALUE, ArenaAllocator.DEFAULT_BLOCK_SIZE, scope);
     }
 
     /**
-     * Returns a native unbounded arena-based allocator, associated with the provided scope, with given block size.
+     * Returns a native unbounded arena-based allocator, with block size set to the specified arena size, associated with
+     * the provided scope, with given arena size. Equivalent to the following code:
+     * <blockquote><pre>{@code
+    SegmentAllocator.newNativeArena(arenaSize, arenaSize, scope);
+     * }</pre></blockquote>
+     *
+     * @param arenaSize the size (in bytes) of the allocation arena.
+     * @param scope the scope associated with the segments returned by the arena-based allocator.
+     * @return a new unbounded arena-based allocator
+     * @throws IllegalArgumentException if {@code blockSize <= 0}, if {@code arenaSize <= 0} or if {@code arenaSize < blockSize}.
+     * @throws IllegalStateException if {@code scope} has been already closed, or if access occurs from a thread other
+     * than the thread owning {@code scope}.
+     */
+    static SegmentAllocator newNativeArena(long arenaSize, ResourceScope scope) {
+        return newNativeArena(arenaSize, arenaSize, scope);
+    }
+
+    /**
+     * Returns a native arena-based allocator, associated with the provided scope, with given arena size and block size.
      * <p>
      * The returned allocator {@linkplain MemorySegment#allocateNative(long, ResourceScope) allocates} a memory segment
      * {@code S} of the specified block size and then responds to allocation requests in one of the following ways:
@@ -430,24 +376,27 @@ public interface SegmentAllocator {
      * performed concurrently; conversely, if the arena allocator is associated with a <em>confined</em> resource scope,
      * allocation requests can only occur from the thread owning the allocator's resource scope.
      * <p>
-     * The returned allocator might throw an {@link OutOfMemoryError} if an incoming allocation request exceeds
-     * the system capacity.
+     * The returned allocator might throw an {@link OutOfMemoryError} if the total memory allocated with this allocator
+     * exceeds the arena size, or the system capacity. Furthermore, the returned allocator is not thread safe, and all
+     * allocation requests should occur within a single thread (regardless of the scope associated with the native arena).
      *
+     * @param arenaSize the size (in bytes) of the allocation arena.
      * @param blockSize the block size associated with the arena-based allocator.
      * @param scope the scope associated with the segments returned by the arena-based allocator.
      * @return a new unbounded arena-based allocator
-     * @throws IllegalArgumentException if {@code blockSize <= 0}.
+     * @throws IllegalArgumentException if {@code blockSize <= 0}, if {@code arenaSize <= 0} or if {@code arenaSize < blockSize}.
      * @throws IllegalStateException if {@code scope} has been already closed, or if access occurs from a thread other
      * than the thread owning {@code scope}.
      */
-    static SegmentAllocator arenaUnbounded(long blockSize, ResourceScope scope) {
+    static SegmentAllocator newNativeArena(long arenaSize, long blockSize, ResourceScope scope) {
         Objects.requireNonNull(scope);
         if (blockSize <= 0) {
             throw new IllegalArgumentException("Invalid block size: " + blockSize);
         }
-        return scope.ownerThread() == null ?
-                new ArenaAllocator.UnboundedSharedArenaAllocator(blockSize, scope) :
-                new ArenaAllocator.UnboundedArenaAllocator(blockSize, scope);
+        if (arenaSize <= 0 || arenaSize < blockSize) {
+            throw new IllegalArgumentException("Invalid arena size: " + arenaSize);
+        }
+        return new ArenaAllocator(blockSize, arenaSize, scope);
     }
 
     /**
@@ -468,17 +417,21 @@ public interface SegmentAllocator {
      */
     static SegmentAllocator prefixAllocator(MemorySegment segment) {
         Objects.requireNonNull(segment);
-        return new SegmentAllocator() {
-            @Override
-            public ResourceScope scope() {
-                return segment.scope();
-            }
-
-            @Override
-            public MemorySegment allocate(long bytesSize, long bytesAlignment) {
-                return segment.asSlice(0, bytesSize);
-            }
-        };
+        return (size, alignment) -> segment.asSlice(0, size);
     }
 
+    /**
+     * Returns a native allocator, associated with the provided scope. Equivalent to (but likely more efficient than)
+     * the following code:
+     * <blockquote><pre>{@code
+    SegmentAllocator nativeAllocator = (size, align) -> MemorySegment.allocateNative(size, align);
+     * }</pre></blockquote>
+     *
+     * @param scope the scope associated with the returned allocator.
+     * @return a native allocator, associated with the provided scope.
+     */
+    static SegmentAllocator nativeAllocator(ResourceScope scope) {
+        Objects.requireNonNull(scope);
+        return (ResourceScopeImpl)scope;
+    }
 }
